--- a/Assets/Styles/boot.css
+++ b/Assets/Styles/boot.css
@@ -45,10 +45,10 @@ html{
 }
 
 .color{
-    color: var(--blue);
+    color: var(--mainThemeColor);
 }
 :root{
-    --blue: #00A9FA;
+    --mainThemeColor: #000;
 }
 .ds_none{
     display: none !important;
@@ -77,7 +77,7 @@ html{
     flex-basis: 100%;
     text-align: center;
     margin: 10px auto;
-    background: var(--blue);
+    background: var(--mainThemeColor);
     color: #fff;
     padding: 5px;
     border-radius: 15px;
@@ -87,7 +87,7 @@ html{
     text-align: center;
     margin: 10px auto;
     background: #fff;
-    color: var(--blue);
+    color: var(--mainThemeColor);
     padding: 5px;
     border-radius: 15px;
 }
