--- a/Themes/myBank/style.css
+++ b/Themes/myBank/style.css
@@ -141,424 +141,6 @@ FOOTER
     color: #fff;
 }
 
-/* 
-CTA
-*/
-
-.main_cta{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 40px 40px;
-}
-.main_cta_content{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 140px 0;
-}
-.main_cta_content_header h1{
-    color: var(--mainThemeColor);
-    font-size: 2.3em;
-    text-align: center;
-}
-.main_cta_content p{
-    color: #333;
-    margin: 20px 0;
-    font-size: 1.2em;
-    text-align: center;
-}
-
-/* 
-MAIN PODCASTS
-*/
-
-.main_podcasts{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-    background: var(--mainThemeColor);
-    justify-content: center;
-    padding: 20px 0;
-}
-.main_podcasts_content{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 80%;
-    justify-content: space-around;
-}
-.main_podcasts_header{
-    flex-basis: 100%;
-}
-.main_podcasts_header h1{
-    color: #fff;
-    font-size: 2.5em;
-    text-align: center;
-    padding: 20px 0;
-}
-
-/* MAIN PODCASTS ARTICLE */
-
-.main_podcasts_article{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 25%;
-    justify-content: center;
-    padding: 10px 0;
-}
-.main_podcasts_article img{
-    width: 100%;
-}
-.main_podcasts_article_header{
-    flex-basis: 100%;
-}
-.main_podcasts_article_header h2{
-    color: #fff;
-    font-size: 1.5em;
-    text-align: center;
-}
-.main_podcasts_article p{
-    color: #fff;
-    text-align: justify;
-    margin-top: 7px;
-}
-
-/* 
-MAIN LANGUAGE
-*/
-
-.main_language{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 80%;
-}
-.main_language_header{
-    flex-basis: 100%;
-}
-.main_language_header h1{
-    font-size: 2.5em;
-    padding-top: 20px;
-    text-align: center;
-}
-.main_language_header p{
-    font-size: 1.5em;
-    color: #333;
-    text-align: center;
-}
-
-/* MAIN LANGUAGE DISCRIPTION */
-
-.main_language_description_header{
-    flex-basis: 100%;
-}
-.main_language_description_header h2{
-    padding-top: 40px;
-    padding-bottom: 20px;
-    font-size: 1.875em;
-}
-.main_language_description p{
-    font-size: 1.2em;
-    text-align: justify;
-}
-
-/* MAIN LANGUAGE DOCUMENTATION */
-
-.main_language_documentation{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-}
-.main_language_documentation_header{
-    flex-basis: 100%;
-}
-
-/* MAIN LANGUAGE ARICLES */
-
-.main_language_articles{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-}
-.main_language_articles_header{
-    flex-basis: 100%;
-}
-.main_language_articles_item{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-    margin: 20px 0;
-}
-.main_language_articles_item img{
-    width: 20%;
-    float: left;
-}
-.main_language_articles_item header{
-    flex-basis: 80%;
-}
-.main_language_articles_item h3{
-    font-size: 1.5em;
-    margin-left: 20px;
-}
-.main_language_articles_item p{
-    margin-left: 20px;
-    margin-top: 10px;
-    font-size: 1.2em;
-}
-
-/* MAIN LANGUAGE VIDEOS */
-
-.main_language_videos{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-    justify-content: space-around;
-}
-.main_language_videos_header{
-    flex-basis: 100%;
-}
-.main_language_videos_article{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 23%;
-}
-.main_language_videos_article img{
-    width: 100%;
-}
-
-/* MAIN LANGUAGE JOBS */
-
-.main_language_job{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 40px 0;
-}
-.main_language_job_header{
-    flex-basis: 100%;
-}
-.main_language_job_article{
-    flex-basis: 23%;
-    display: flex;
-    flex-wrap: wrap;
-}
-.main_language_job_article a{
-    color: #000;
-    font-size: 1.2em;
-}
-.main_language_job_article img{
-    margin: 0 auto;
-}
-.main_language_job_article h3{
-    flex-basis: 100%;
-}
-
-/* 
-MAIN CONTENT
-*/
-
-.main_content{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 40px 0px;
-    flex-basis: 100%;
-    background: var(--mainThemeColor);
-    justify-content: center;
-}
-.main_content_section{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 80%;
-    margin: 0 30px;
-    justify-content: space-around;
-}
-.main_content_section_div{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-    justify-content: space-around;
-}
-.main_content_section_header{
-    flex-basis: 100%;
-    margin: 10px auto;
-}
-.main_content_section_header h1{
-    color: #fff;
-    font-size: 2.3em;
-    text-align: center;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-.main_content_article{
-    flex-basis: 18%;
-    background: #fff;
-    padding: 20px;
-    border-radius: 15px;
-    margin-top: 20px;
-}
-.main_content_article_header h1{
-    color: var(--mainThemeColor);
-    margin-bottom: 10px;
-    font-size: 2em;
-}
-.main_content_article h2{
-    margin: 5px 0;
-    font-size: 1.2em;
-}
-.main_content_article a{
-    color: #333;
-}
-
-/* 
-MAIN VIDEOS
-*/
-
-.main_videos{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 80%;
-    padding: 20px 0;
-    justify-content: space-around;
-}
-.main_videos_header{
-    flex-basis: 100%;
-}
-.main_videos_header h1{
-    font-size: 2.5em;
-    text-align: center;
-    padding: 20px 0;
-}
-
-/* MAIN VIDEOS ARTICLE */
-
-.main_videos_article{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 25%;
-    margin-bottom: 10px;
-}
-.main_videos_article img{
-    width: 100%;
-}
-.main_videos_article h2{
-    font-size: 1.5em;
-    text-align: center;
-}
-.main_videos_article p{
-    text-align: justify;
-    margin-top: 7px;
-}
-.main_videos_link{
-    flex-basis: 100%;
-    text-align: center;
-    margin: 10px auto;
-    background: var(--mainThemeColor);
-    color: #fff;
-    padding: 5px;
-    border-radius: 15px;
-}
-
-/* 
-MAIN ARTICLE
-*/
-
-.main_article{
-    display: flex;
-    flex-wrap: wrap;
-    padding: 40px 0;
-    flex-basis: 80%;
-    justify-content: space-around;
-}
-.main_article_header{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-}
-.main_article_header h1{
-    flex-basis: 85%;
-    font-size: 2.5em;
-    color: var(--mainThemeColor);
-    margin: 20px 0;
-}
-.main_article_header a{
-    flex-basis: 15%;
-    margin: 30px 0;
-    background: var(--mainThemeColor);
-    color: #fff;
-    padding: 10px 15px;
-    border-radius: 15px;
-    text-align: center;
-}
-.main_article_header h2{
-    font-size: 1.2em;
-    color: #333;
-}
-.main_article_content{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 100%;
-    margin: 0 auto;
-}
-.main_article_content_img{
-    width: 100%;
-    flex-basis: 100%;
-    margin: 20px auto;
-    border: solid 3px var(--mainThemeColor);
-}
-.main_article_content p{
-    font-size: 1.2em;
-    margin: 15px auto;
-    text-align: justify;
-}
-.main_article_link{
-    display: flex;
-    flex-basis: 50%;
-    margin: 10px auto;
-}
-.main_article_link a{
-    flex-basis: 100%;
-    text-align: center;
-    margin: 0px auto;
-    background: var(--mainThemeColor);
-    color: #fff;
-    padding: 10px 0;
-    border-radius: 15px;
-}
-
-/* 
-MAIN PROGRAM
-*/
-
-.main_program{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.main_program_header{
-    flex-basis: 80%;
-    padding: 20px 0;
-}
-.main_program_header h1{
-    font-size: 2.5em;
-    color: var(--mainThemeColor);
-    text-align: center;
-}
-.main_program_languages{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.main_program_languages_article{
-    display: flex;
-    flex-wrap: wrap;
-    flex-basis: 10%;
-    margin: 0 15px;
-}
-.main_program_languages_article img{
-    width: 100%;
-}
-.main_program_languages_article a{
-    flex-basis: 100%;
-    color: #fff;
-    margin: 20px 0;
-}
 
 /* 
 404
@@ -584,11 +166,34 @@ MAIN PROGRAM
     color: var(--mainThemeColor);
 }
 
-/* LINKEDIN ICON SIZE */
-
-.linkedin_icon_size{
-    width: 32px;
-    height: 32px;
+/* 
+LOGIN
+*/
+.login{
+    flex-basis: 20%;
+    margin: 70px 0;
+    padding: 7.8% 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.login_header{
+    flex-basis: 100%;
+    font-size: 2em;
+    text-align: center;
+}
+.login_form{
+    display: flex;
+    flex-wrap: wrap;
+    flex-basis: 100%;
+    justify-content: center;
+}
+.login_form input{
+    flex-basis: 100%;
+    margin: 10px 0;
+    border: solid 3px #000;
+    border-radius: 50px;
+    text-align: center;
 }
 
 /* 
